--- a/BloodSimu.Model/BloodSimu.Model.csproj
+++ b/BloodSimu.Model/BloodSimu.Model.csproj
@@ -42,8 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Particle.cs" />
+    <Compile Include="ParticleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vector2D.cs" />
+    <Compile Include="Vector2DTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
