--- a/BloodSimu.Model/BloodSimu.Model.csproj
+++ b/BloodSimu.Model/BloodSimu.Model.csproj
@@ -42,11 +42,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Border.cs" />
+    <Compile Include="BorderTest.cs" />
     <Compile Include="Particle.cs" />
     <Compile Include="ParticleTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector2D.cs" />
     <Compile Include="Vector2DTest.cs" />
+    <Compile Include="World.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
